# ThreeMoonsLab_agents-shipgate

./: .cursorrules  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  STABILITY.md  action.yml  llms-full.txt  llms.txt  pyproject.toml
.claude/commands/: shipgate.md
.cursor/rules/: agents-shipgate.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  check_request.yml  feature_request.yml
.github/workflows/: agents-shipgate.yml  ci.yml  release.yml  test.yml
.well-known/: agents-shipgate.json
benchmark/: README.md  runner.md  upstream-prs.md
benchmark/prompts/: 01-prepare-for-release.txt  02-review-tool-pr.txt  03-improve-readiness.txt  04-docs-only-negative.txt  README.md
benchmark/repos/: README.md
benchmark/results/: 2026-W2-baseline.csv  README.md
benchmark/setup-variants/: README.md
benchmark/setup-variants/00-no-hints/: README.md
benchmark/setup-variants/10-agents-md/: AGENTS.md.template  README.md
benchmark/setup-variants/20-claude-md/: CLAUDE.md.template  README.md
benchmark/setup-variants/30-cursor-rule/: README.md  agents-shipgate.mdc.template
benchmark/setup-variants/40-shipgate-yaml/: README.md  shipgate.yaml.template
docs/: INDEX.md  agent-action-guide.md  agent-adoption-harness.md  agent-autofix-boundary.md  agent-contract-current.md  agent-recipes.md  ai-search-summary.md  architecture.md  autofix-policy.md  baseline.md  category.md  checks.json  checks.md  concepts.md  decisions.md  design-partners.md  diagnostics.md  distribution.md  errors.json  examples.md  faq.md  framework-adapter-checklist.md  glossary.md  integrations.md  manifest-v0.1.example.full.yaml  manifest-v0.1.example.minimal.yaml  manifest-v0.1.json  manifest-v0.1.md  minimal-real-configs.md  overview.md  packet-schema.v0.1.json  packet-schema.v0.2.json  packet-schema.v0.3.json  policy-packs.md  quickstart.md  report-reading-for-agents.md  report-schema.v0.1.json  report-schema.v0.10.json  report-schema.v0.11.json  report-schema.v0.12.json  (+16 more)
docs/agents/: use-with-claude-code.md  use-with-codex.md  use-with-cursor.md
docs/decks/architecture-overview/: README.md
docs/decks/openai-api-use-case/: README.md
docs/decks/vc-thesis/: README.md  assemble.py  build_deck.py  build_pptx.py  build_pptx_native.py  crop_fragments.py
examples/circleci/: 01-advisory.yml  02-strict-with-baseline.yml  03-sarif-artifact-retention.yml  04-multi-config-workspace.yml  05-on-tool-source-changes.yml  README.md
examples/github-actions/: 01-advisory-pr-comment.yml  02-strict-on-critical.yml  03-strict-with-baseline.yml  04-multi-config-workspace.yml  05-sarif-to-code-scanning.yml  06-on-tool-source-changes.yml  README.md
examples/gitlab-ci/: 01-advisory.yml  02-strict-with-baseline.yml  03-sarif-or-artifact.yml  04-multi-config-workspace.yml  05-on-tool-source-changes.yml  README.md
examples/golden-prs/: README.md  golden-pr-from-coding-agent.md
examples/golden-prs/mcp-only-tool-server/: README.md
examples/golden-prs/openai-agents-sdk-refund-agent/: README.md
examples/golden-prs/openapi-support-agent/: README.md
examples/pre-commit/: README.md
marketing/: linkedin-founder-repost.md  linkedin-launch-post.md
prompts/: README.md  add-shipgate-to-repo.md  recommend-fixes.md  stabilize-strict-mode.md  triage-false-positive.md
samples/: README.md
samples/_anti_patterns/: README.md
samples/_anti_patterns/dynamic_toolset_factory/: README.md  factory.py  shipgate.yaml
samples/_anti_patterns/empty_suppression_reason/: README.md  shipgate.yaml
samples/_anti_patterns/misplaced_field/: README.md  shipgate.yaml  tools.json
samples/_anti_patterns/missing_purpose/: README.md  shipgate.yaml
samples/_anti_patterns/path_traversal/: README.md  shipgate.yaml
samples/baseline_workflow/: README.md
samples/clean_read_only_agent/: shipgate.yaml  tools.json
samples/google_adk_agent/: agent.py  shipgate.yaml
samples/google_adk_agent/evals/: support.eval.json
samples/google_adk_agent/inventories/: mcp-tools.json
samples/google_adk_agent/specs/: support.openapi.yaml
samples/hitl_evidence_agent/: README.md  shipgate.yaml  tools.json
samples/hitl_evidence_covered_agent/: README.md  shipgate.yaml  tools.json
samples/hitl_evidence_covered_agent/validation/: approval-traces.jsonl  high-risk-exclusions.yaml  override-log.jsonl  promotion-criteria.yaml
samples/multi_agent_workspace/billing/: shipgate.yaml  tools.json
samples/multi_agent_workspace/support/: shipgate.yaml  tools.json
samples/simple_anthropic_agent/: shipgate.yaml
samples/simple_anthropic_agent/tools/: anthropic-tools.json
samples/simple_crewai_agent/: crew.py  shipgate.yaml
samples/simple_langchain_agent/: shipgate.yaml
samples/simple_openai_api_agent/: openai-config.json  shipgate.yaml
samples/support_refund_agent/: shipgate.yaml
scripts/: build-llms-full.py  generate_schemas.py
skills/agents-shipgate/: SKILL.md
src/agents_shipgate/: __init__.py  __main__.py  contract.py  fixtures.py  triggers.py
tests/: test_action_metadata.py  test_agent_action_summary.py  test_agent_instructions_apply.py  test_agent_instructions_renderers.py  test_anthropic_api.py  test_apply_patches.py  test_bootstrap.py  test_ci.py  test_ci_recipes.py  test_cli.py  test_codex_plugin.py  test_config.py  test_crewai.py  test_detect.py  test_diagnostics.py  test_docs_links.py  test_documentation_checks.py  test_evidence_packet.py  test_explain_finding.py  test_finding_remediation.py  test_findings.py  test_fixture.py  test_fixture_no_import.py  test_google_adk.py  test_init_agent_instructions.py  test_init_auto.py  test_init_ci.py  test_inputs.py  test_langchain.py  test_managed_block.py  test_manifest_consistency.py  test_manifest_scope.py  test_n8n.py  test_openai_api.py  test_openapi_fuzz.py  test_patch_generators.py  test_patches_model.py  test_plugins.py  test_policy_packs.py  test_prompt_parity.py  (+17 more)
tests/agent_tasks/: README.md  conftest.py
tools/: shipgate-detect.py
(+145 files in other folders)
