[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agents-shipgate"
version = "0.2.0"
description = "Manifest-first release readiness scanner for agent tool surfaces."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Agents Shipgate Contributors" }
]
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0.1,<7",
  "typer>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/ThreeMoonsLab/agents-shipgate"
Repository = "https://github.com/ThreeMoonsLab/agents-shipgate"
Issues = "https://github.com/ThreeMoonsLab/agents-shipgate/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "cyclonedx-bom>=5,<7",
  "hypothesis>=6,<7",
  "jsonschema>=4,<5",
  "pip-audit>=2.7,<3",
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
  "sigstore>=3,<5",
  "twine>=5,<7",
]

[project.scripts]
agents-shipgate = "agents_shipgate.cli.main:app"

[project.entry-points."agents_shipgate.checks"]
inventory = "agents_shipgate.checks.inventory:run"
documentation = "agents_shipgate.checks.documentation:run"
schema = "agents_shipgate.checks.schema:run"
auth = "agents_shipgate.checks.auth:run"
manifest_scope = "agents_shipgate.checks.manifest_scope:run"
policy = "agents_shipgate.checks.policy:run"
side_effects = "agents_shipgate.checks.side_effects:run"
api = "agents_shipgate.checks.api:run"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_shipgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
ignore = [
  "B008", # Typer commands intentionally use Option() defaults.
]
