[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agents-shipgate"
version = "0.5.1"
description = "Static release-readiness scanner for AI agent tool surfaces (MCP, OpenAPI, OpenAI Agents SDK, Anthropic Messages API, Google ADK, LangChain, CrewAI). CLI + GitHub Action."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Agents Shipgate Contributors" }
]
keywords = [
  "agent",
  "ai-agent",
  "agent-release",
  "agent-release-readiness",
  "tool-use",
  "release-readiness",
  "release-gate",
  "mcp",
  "openai-agents-sdk",
  "google-adk",
  "openapi",
  "static-analysis",
  "github-action",
  "sarif",
  "agent-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
  "Environment :: Console",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0.1,<7",
  "typer>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/ThreeMoonsLab/agents-shipgate"
Repository = "https://github.com/ThreeMoonsLab/agents-shipgate"
Issues = "https://github.com/ThreeMoonsLab/agents-shipgate/issues"
Documentation = "https://github.com/ThreeMoonsLab/agents-shipgate/wiki"
Changelog = "https://github.com/ThreeMoonsLab/agents-shipgate/blob/main/CHANGELOG.md"
"Agent Instructions" = "https://github.com/ThreeMoonsLab/agents-shipgate/blob/main/AGENTS.md"
"Stability Contract" = "https://github.com/ThreeMoonsLab/agents-shipgate/blob/main/STABILITY.md"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "cyclonedx-bom>=5,<7",
  "hypothesis>=6,<7",
  "jsonschema>=4,<5",
  "pip-audit>=2.7,<3",
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
  "sigstore>=3,<5",
  "twine>=5,<7",
]

[project.scripts]
agents-shipgate = "agents_shipgate.cli.main:app"
shipgate = "agents_shipgate.cli.main:app"

[project.entry-points."agents_shipgate.checks"]
inventory = "agents_shipgate.checks.inventory:run"
documentation = "agents_shipgate.checks.documentation:run"
schema = "agents_shipgate.checks.schema:run"
auth = "agents_shipgate.checks.auth:run"
manifest_scope = "agents_shipgate.checks.manifest_scope:run"
policy = "agents_shipgate.checks.policy:run"
side_effects = "agents_shipgate.checks.side_effects:run"
api = "agents_shipgate.checks.api:run"
adk = "agents_shipgate.checks.adk:run"
langchain = "agents_shipgate.checks.langchain:run"
crewai = "agents_shipgate.checks.crewai:run"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_shipgate"]

[tool.hatch.build.targets.wheel.force-include]
"samples" = "agents_shipgate/_fixtures"
"AGENTS.md" = "agents_shipgate/_meta/AGENTS.md"
"STABILITY.md" = "agents_shipgate/_meta/STABILITY.md"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.agents-private",
  "/.coverage",
  "/.hypothesis",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.venv",
  "/.venv-py312",
  "/build",
  "/dist",
  "/docs/decks",
  "/docs/decks/**",
  "/htmlcov",
  "/marketing",
  "/marketing/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  "docs/decks",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
ignore = [
  "B008", # Typer commands intentionally use Option() defaults.
]
