[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "agents-shipgate"
version = "0.10.0"
description = "Static release-readiness gate for AI agent tool surfaces. CLI + GitHub Action. Scans MCP, OpenAPI, OpenAI Agents SDK, Anthropic, Google ADK, LangChain, CrewAI, n8n."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Agents Shipgate Contributors" }
]
keywords = [
  "agent",
  "ai-agent",
  "agent-release",
  "agent-release-readiness",
  "tool-use",
  "release-readiness",
  "release-gate",
  "mcp",
  "openai-agents-sdk",
  "google-adk",
  "openapi",
  "static-analysis",
  "github-action",
  "sarif",
  "agent-tools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security",
  "Environment :: Console",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0.3,<7",
  "ruamel.yaml>=0.18,<1",
  "typer>=0.12,<1",
]

[project.urls]
Homepage = "https://threemoonslab.com/"
Repository = "https://github.com/ThreeMoonsLab/agents-shipgate"
Issues = "https://github.com/ThreeMoonsLab/agents-shipgate/issues"
Documentation = "https://github.com/ThreeMoonsLab/agents-shipgate/wiki"
Changelog = "https://github.com/ThreeMoonsLab/agents-shipgate/blob/main/CHANGELOG.md"
"Agent Instructions" = "https://github.com/ThreeMoonsLab/agents-shipgate/blob/main/AGENTS.md"
"Stability Contract" = "https://github.com/ThreeMoonsLab/agents-shipgate/blob/main/STABILITY.md"
"LLMs.txt" = "https://raw.githubusercontent.com/ThreeMoonsLab/agents-shipgate/main/llms.txt"
"LLMs Full" = "https://raw.githubusercontent.com/ThreeMoonsLab/agents-shipgate/main/llms-full.txt"
"Trigger Catalog" = "https://raw.githubusercontent.com/ThreeMoonsLab/agents-shipgate/main/docs/triggers.json"
"Well-Known" = "https://raw.githubusercontent.com/ThreeMoonsLab/agents-shipgate/main/.well-known/agents-shipgate.json"

[project.optional-dependencies]
pdf = [
  # Optional dependency for `agents-shipgate scan --packet-format ...,pdf`
  # and `agents-shipgate evidence-packet --format pdf`. Skipped with a
  # warning if not installed; the rest of the packet still renders.
  "weasyprint>=68.1,<70",
]
dev = [
  "build>=1.5.0,<2",
  "cyclonedx-bom>=5,<8",
  "hypothesis>=6.152.4,<7",
  "jsonschema>=4,<5",
  "pip-audit>=2.7,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.8,<1",
  "sigstore>=3,<5",
  "twine>=5,<7",
]

[project.scripts]
agents-shipgate = "agents_shipgate.cli.main:app"
shipgate = "agents_shipgate.cli.main:app"

[project.entry-points."agents_shipgate.checks"]
inventory = "agents_shipgate.checks.inventory:run"
documentation = "agents_shipgate.checks.documentation:run"
schema = "agents_shipgate.checks.schema:run"
auth = "agents_shipgate.checks.auth:run"
manifest_scope = "agents_shipgate.checks.manifest_scope:run"
policy = "agents_shipgate.checks.policy:run"
evidence = "agents_shipgate.checks.evidence:run"
side_effects = "agents_shipgate.checks.side_effects:run"
api = "agents_shipgate.checks.api:run"
adk = "agents_shipgate.checks.adk:run"
langchain = "agents_shipgate.checks.langchain:run"
crewai = "agents_shipgate.checks.crewai:run"
codex_plugin = "agents_shipgate.checks.codex_plugin:run"

[tool.hatch.build.targets.wheel]
packages = ["src/agents_shipgate"]

[tool.hatch.build.targets.wheel.force-include]
"samples" = "agents_shipgate/_fixtures"
"AGENTS.md" = "agents_shipgate/_meta/AGENTS.md"
"STABILITY.md" = "agents_shipgate/_meta/STABILITY.md"
"docs/triggers.json" = "agents_shipgate/_meta/triggers.json"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.agents-private",
  "/.coverage",
  "/.hypothesis",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.venv",
  "/.venv-py312",
  "/build",
  "/dist",
  "/docs/decks",
  "/docs/decks/**",
  "/htmlcov",
  "/marketing",
  "/marketing/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  "docs/decks",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]
ignore = [
  "B008", # Typer commands intentionally use Option() defaults.
]
